--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
   </dependencies>
 
   <build>
+    <finalname>prashant</finalname>
      <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
