--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
   </dependencies>
 
   <build>
-    <finalname>prashant</finalname>
+    <finalName>prashant</finalName>
      <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
